--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 click==7.1.2
 docutils==0.16
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
 joblib==1.0.0
+MarkupSafe==1.1.1
 nltk==3.5
 regex==2020.11.13
 statistics==1.0.3.5
 textblob==0.15.3
 tqdm==4.56.0
+Werkzeug==1.0.1
